<resources>
    <string name="app_name">Ex8_1Drawable</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_next">NEXT</string>
    <string name="txt_salary">Your salary: 0 dollar</string>
    <string name="txt_zero">$0</string>
    <string name="txt_end">$100000</string>
    <string name="txt_question_sport">Which sport do you like?</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="pingpong">Ping pong</string>
    <string name="swimming">Swimming</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>
    <string name="btn_done">DONE</string>

    <string name="first_name_error">You must enter first name</string>
    <string name="last_name_error">You must enter last name</string>
    <string name="email_error">You must enter email</string>
    <string name="email_invalid_error">Email is invalid</string>
    <string name="phone_number_error">You must enter phone number</string>
    <string name="phone_number_invalid_error">Phone number is invalid</string>
    <string name="txt_filling_info">Thank you for filling information. What do you want to do next?</string>
    <string name="btn_send_email">SEND EMAIL</string>
    <string name="btn_restart">RESTART</string>
    <string name="txt_step1">Step 1</string>
    <string name="txt_step2">Step 2</string>
    <string name="txt_step3">Step 3</string>
</resources>
