<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_background_step3">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_step3"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/txt_filling_info"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:text="@string/btn_send_email"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorButton"
        android:text="@string/btn_restart"
        android:textColor="@color/colorText" />


</LinearLayout>